Pave the way for async http requests